--- a/recurve/src/main/res/layout/loading_state.xml
+++ b/recurve/src/main/res/layout/loading_state.xml
@@ -45,6 +45,7 @@
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/error_msg"
+            android:text="@{resource.message ?? @string/unknown_error}"
             app:visibleGone="@{resource.status == Status.ERROR}"/>
     </LinearLayout>
 </layout>
