--- a/recurve/src/main/res/layout/fragment_list.xml
+++ b/recurve/src/main/res/layout/fragment_list.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+    <data>
+        <variable
+            name="adapter"
+            type="tang.com.recurve.widget.ModulesAdapter"/>
+    </data>
+
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:adapter="@{adapter}"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </layout>
 
