--- a/oauth2/src/main/res/navigation/navigation_oauth2.xml
+++ b/oauth2/src/main/res/navigation/navigation_oauth2.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/navigation_oauth2"
+    app:startDestination="@id/oauth2Fragment">
 
     <fragment android:id="@+id/oauth2Fragment"
         android:name="com.tangpj.oauth2.ui.Oauth2Fragment"
