--- a/oauth2/src/main/res/layout/activity_oauth2.xml
+++ b/oauth2/src/main/res/layout/activity_oauth2.xml
@@ -4,6 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tangpj.oauth2.ui.Oauth2Activity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <fragment
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:navGraph="@navigation/navigation_oauth2"
+            app:defaultNavHost="true"
+            />
+
+    </FrameLayout>
 
 </layout>
 
