--- a/oauth2/src/main/res/navigation/navigation_oauth2.xml
+++ b/oauth2/src/main/res/navigation/navigation_oauth2.xml
@@ -8,6 +8,15 @@
         android:name="com.tangpj.oauth2.ui.Oauth2Fragment"
         android:label="Oauth2Fragment">
 
+        <argument android:name="code"
+            android:defaultValue="@null"
+            app:nullable="true"
+            app:argType="string"/>
+
+        <action
+            android:id="@+id/refresh_code"
+            app:destination="@id/oauth2Fragment"/>
+
     </fragment>
 
 </navigation>
