--- a/baselib/res/src/main/res/values/styles.xml
+++ b/baselib/res/src/main/res/values/styles.xml
@@ -6,4 +6,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.DayNight" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
