--- a/baselib/res/src/main/res/values/colors.xml
+++ b/baselib/res/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 主题无关颜色 -->
+    <color name="textColorLight">#EEE</color>
+    <color name="textColor">#333</color>
+    <color name="textColorDark">#000</color>
 
 </resources>
