更新oauth2模块的di作用域

--- a/modules/oauth2/src/main/res/layout/activity_oauth2.xml
+++ b/modules/oauth2/src/main/res/layout/activity_oauth2.xml
@@ -2,7 +2,7 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.tangpj.oauth2.ui.Oauth2Activity">
+    tools:context="com.tangpj.oauth2.ui.AuthorizationActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
