--- a/modules/oauth2/src/main/res/layout/fragment_oauth2.xml
+++ b/modules/oauth2/src/main/res/layout/fragment_oauth2.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewModel"
-            type="com.tangpj.oauth2.ui.Oauth2ViewModel"/>
+            type="com.tangpj.oauth2.ui.AuthorizationViewModel"/>
         
         <variable
             name="authorizeListener"
@@ -20,7 +20,7 @@
         >
 
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
