--- a/modules/oauth2/src/main/res/navigation/navigation_oauth2.xml
+++ b/modules/oauth2/src/main/res/navigation/navigation_oauth2.xml
@@ -5,7 +5,7 @@
     app:startDestination="@id/oauth2Fragment">
 
     <fragment android:id="@+id/oauth2Fragment"
-        android:name="com.tangpj.oauth2.ui.Oauth2Fragment"
+        android:name="com.tangpj.oauth2.ui.AuthorizationFragment"
         android:label="Oauth2Fragment">
 
         <argument android:name="code"
