--- a/modules/repository/src/main/res/layout/item_repository.xml
+++ b/modules/repository/src/main/res/layout/item_repository.xml
@@ -79,7 +79,7 @@
                 android:layout_marginLeft="@dimen/margin_horizontal_material"
                 android:drawableStart="@mipmap/ic_star_rate_black_18dp"
                 android:drawableLeft="@mipmap/ic_star_rate_black_18dp"
-                android:text="@{repositor.star}"
+                android:text="@{String.valueOf(repositor.star)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_repository_language"
                 app:layout_constraintTop_toBottomOf="@+id/tv_repository_desc"
@@ -96,7 +96,7 @@
                 android:layout_marginLeft="@dimen/margin_horizontal_material"
                 android:drawableStart="@mipmap/ic_star_rate_black_18dp"
                 android:drawableLeft="@mipmap/ic_star_rate_black_18dp"
-                android:text="@{repositor.forked}"
+                android:text="@{String.valueOf(repositor.forked)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_repository_star"
                 app:layout_constraintTop_toBottomOf="@+id/tv_repository_desc"
