--- a/modules/repository/src/main/res/layout/activity_repositories.xml
+++ b/modules/repository/src/main/res/layout/activity_repositories.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.repositories.RepositoriesActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
-    <fragment
-        android:id="@+id/fragment_container"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/navigation_repositories"
-        app:defaultNavHost="true"
-        />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+
+
+    </FrameLayout>
+
+</layout>
