--- a/modules/repository/src/main/res/layout/activity_repositories.xml
+++ b/modules/repository/src/main/res/layout/activity_repositories.xml
@@ -2,14 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.repositories.RepositoriesActivity"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+    tools:context=".ui.repositories.RepositoriesActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:behavior="@string/appbar">
 
-
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
     </FrameLayout>
 
