完成repo相关数据类

--- a/modules/repository/src/main/res/navigation/navigation_repositories.xml
+++ b/modules/repository/src/main/res/navigation/navigation_repositories.xml
@@ -5,7 +5,7 @@
     app:startDestination="@+id/repositoriesFragment">
 
     <fragment android:id="@+id/repositoriesFragment"
-        android:name="com.tangpj.repository.ui.repositories.RepositoriesFragment"
+        android:name="com.tangpj.repository.ui.repositories.RepoFragment"
         android:label="RepositoriesFragment"/>
 
 
