--- a/baselib/github_base/src/main/res/layout/loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/loading_state.xml
@@ -16,11 +16,12 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="com.tangpj.recurve.resource.Resource"/>
         <import type="com.tangpj.recurve.resource.Status"/>
-        <variable name="resource" type="com.tangpj.recurve.resource.Resource"/>
+        <variable name="resource" type="Resource"/>
         <variable name="callback" type="com.tangpj.recurve.common.RetryCallback"/>
     </data>
     <LinearLayout android:orientation="vertical"
@@ -46,7 +47,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/error_msg"
             android:text="@{resource.message ?? @string/unknown_error}"
-            app:visibleGone="@{resource.status == Status.ERROR}"/>
+            app:visibleGone="@{resource.status == Status.ERROR}"
+            tools:visibility="visible"/>
     </LinearLayout>
 </layout>
 
