--- a/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
+++ b/baselib/github_base/src/main/res/layout/fragment_base_recycler_view.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    
+    <data>
+
+        <import type="androidx.lifecycle.LiveData"/>
+        <import type="com.tangpj.recurve.resource.Resource"/>
+
+        <variable
+            name="resource"
+            type="LiveData&lt;Resource&lt;Object>>"/>
+
+        <variable
+            name="retryCallback"
+            type="com.tangpj.recurve.common.RetryCallback"/>
+
+    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -10,11 +26,12 @@
             layout="@layout/fragment_recurve_recycler_view"/>
 
         <include
-            android:id="@+id/loading_content"
             layout="@layout/loading_state"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            app:resource="@{(Resource) resource}"
+            app:callback="@{() -> retryCallback.retry()}"/>
 
     </FrameLayout>
 
