--- a/baselib/github_base/src/main/res/layout/loading_state.xml
+++ b/baselib/github_base/src/main/res/layout/loading_state.xml
@@ -21,8 +21,11 @@
     <data>
         <import type="com.tangpj.recurve.resource.Resource"/>
         <import type="com.tangpj.recurve.resource.Status"/>
+        <import type="kotlin.Unit"/>
+        <import type="kotlin.jvm.functions.Function0"/>
+
         <variable name="resource" type="Resource"/>
-        <variable name="callback" type="com.tangpj.recurve.common.RetryCallback"/>
+        <variable name="callback" type="Function0&lt;Unit>"/>
     </data>
     <LinearLayout android:orientation="vertical"
         app:visibleGone="@{resource.data == null}"
@@ -41,7 +44,7 @@
             android:layout_height="wrap_content"
             android:text="@string/retry"
             android:id="@+id/retry"
-            android:onClick="@{() -> callback.retry()}"
+            android:onClick="@{() -> callback.invoke()}"
             app:visibleGone="@{resource.status == Status.ERROR}"/>
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
